--- a/README
+++ b/README
@@ -15,3 +15,14 @@ it returns:
 I whipped this together for internal use is some of our applications, and it does the trick. 
 It will attempt to parse a .bak file in the same directory as the config file you specify if
 there is an error. See the manpage for details.   
+
+CHANGES:
+
+0.2 -> Two new options in load_conf(), allows you to pass a hash ref to be
+filled by the config reader, instead of the default behaviour of just
+passing back a hash.  As a natural extension to this functionality, you
+may also pass an array ref to load_conf() containing variable names which
+you do not want the config reader to over write if it finds them in the
+config file.  
+
+
